V 1.0.1 - Add new component and new folder

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bdiscom-website",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -36,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.10.0"
   }
 }
