--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "typescript": "^5.3.3"
   }
 }
